# commander-cli

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  Test.hs  commander-cli.cabal
.github/workflows/: ci.yml
app/: Main.hs  Task.hs
app/Task/: CLI.hs  Codec.hs  IO.hs
examples/: bad.hs  good.hs  start-postgres.hs  stop-postgres.hs
src/Control/: Commander.hs
src/Control/Monad/: Commander.hs
src/Options/: Commander.hs
src/Options/Commander/: Annotated.hs  Argument.hs  Arguments.hs  Combine.hs  Compatibility.hs  Description.hs  Environment.hs  Flag.hs  Imports.hs  InitialState.hs  Internal.hs  Middleware.hs  Named.hs  Option.hs  Program.hs  Raw.hs  Sequence.hs  Subcommand.hs  Unrender.hs
src/Options/Commander/Arguments/: AtLeast.hs  Collections.hs  NonEmpty.hs  NonEmptyTail.hs
test/: Test.hs
test/Options/: CommanderSpec.hs
test/Options/Commander/: ArgumentSpec.hs  ArgumentsSpec.hs  EitherSpec.hs  EnvironmentSpec.hs  FlagSpec.hs  OptionSpec.hs  RawSpec.hs  SubcommandSpec.hs
test/Options/Commander/Arguments/: AtLeastSpec.hs  CollectionsSpec.hs  NonEmptySpec.hs
