cabal-version:       2.4

name:                commander-cli
version:             0.10.1.1
synopsis:            A command line argument/option parser library
description:         A command line argument/option parser library.
homepage:            https://github.com/SamuelSchlesinger/commander-cli
bug-reports:         https://github.com/SamuelSchlesinger/commander-cli/issues
license:             MIT
license-file:        LICENSE
author:              Samuel Schlesinger
maintainer:          sgschlesinger@gmail.com
copyright:           2019 Samuel Schlesinger
category:            System, CLI, Options, Parsing
extra-source-files:  CHANGELOG.md, README.md
tested-with:         GHC ==8.6.3 || ==8.8.3 || ==8.10.1

source-repository head
  type: git 
  location: https://github.com/samuelschlesinger/commander-cli

library
  exposed-modules:     Options.Commander
  build-depends:       base >=4.12 && < 5,
                       bytestring >=0.8 && <1,
                       mtl >=2.2 && <3,
                       text >=1.2 && <2,
                       unordered-containers >=0.2 && < 1,
                       commandert >=0.1,
                       containers >=0.1
  hs-source-dirs:      src
  default-language:    Haskell2010

executable task-manager
  main-is:             Main.hs
  build-depends:       base >=4.12 && < 5,
                       mtl >=2.2 && <3,
                       text >=1.2 && < 2,
                       directory >= 1.3 && < 2,
                       process >= 1.6 && < 2,
                       commandert >=0.1,
                       commander-cli
  hs-source-dirs:      app
  default-language:    Haskell2010

test-suite test-commander
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  build-depends:       base >= 4.12 && < 5,
                       text >=1.2 && < 2,
                       unordered-containers >= 0.2 && < 1,
                       commandert >=0.1,
                       commander-cli
  default-language:    Haskell2010
