cabal-version:       2.4

name:                commander-cli
version:             0.11.0.0
synopsis:            A command line argument/option parser library
description:         A command line argument/option parser library.
homepage:            https://github.com/SamuelSchlesinger/commander-cli
bug-reports:         https://github.com/SamuelSchlesinger/commander-cli/issues
license:             MIT
license-file:        LICENSE
author:              Samuel Schlesinger
maintainer:          sgschlesinger@gmail.com
copyright:           2019 Samuel Schlesinger
category:            System, CLI, Options, Parsing
extra-source-files:  CHANGELOG.md, README.md
tested-with:         GHC ==8.6.3 || ==8.8.3 || ==8.10.1

source-repository head
  type: git 
  location: https://github.com/samuelschlesinger/commander-cli

library
  exposed-modules:     Options.Commander,
                       Options.Commander.Annotated,
                       Options.Commander.Argument,
                       Options.Commander.Combine,
                       Options.Commander.Description,
                       Options.Commander.Environment,
                       Options.Commander.Flag,
                       Options.Commander.Program,
                       Options.Commander.Internal,
                       Options.Commander.Imports,
                       Options.Commander.Middleware,
                       Options.Commander.Named,
                       Options.Commander.Option,
                       Options.Commander.Raw,
                       Options.Commander.Sequence,
                       Options.Commander.Subcommand,
                       Options.Commander.Unrender
  default-extensions:  AllowAmbiguousTypes,
                       ViewPatterns,
                       BlockArguments,
                       DataKinds,
                       DeriveGeneric,
                       DerivingVia,
                       FlexibleInstances,
                       GADTs,
                       GeneralizedNewtypeDeriving,
                       LambdaCase,
                       OverloadedStrings,
                       PolyKinds,
                       QuasiQuotes,
                       RankNTypes,
                       RecordWildCards,
                       ScopedTypeVariables,
                       StandaloneDeriving,
                       TemplateHaskell,
                       TupleSections,
                       TypeApplications,
                       TypeFamilies,
                       TypeOperators,
                       UndecidableInstances
  build-depends:       base >=4.12 && < 5,
                       bytestring >=0.8 && <1,
                       mtl >=2.2 && <3,
                       text >=1.2 && <2,
                       unordered-containers >=0.2 && < 1,
                       commandert >=0.1,
                       containers >=0.1,
                       template-haskell ^>=2.14.0.0
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

executable task-manager
  main-is:             Main.hs
  hs-source-dirs:      app
  other-modules:       Task,
                       Task.CLI,
                       Task.Codec,
                       Task.IO
  default-extensions:  BlockArguments,
                       DataKinds,
                       LambdaCase,
                       NamedFieldPuns,
                       PolyKinds,
                       RecordWildCards,
                       ScopedTypeVariables,
                       TypeApplications,
                       TypeFamilies,
                       TypeOperators,
                       ViewPatterns
  build-depends:       base >=4.12 && < 5,
                       mtl >=2.2 && <3,
                       text >=1.2 && < 2,
                       directory >= 1.3 && < 2,
                       process >= 1.6 && < 2,
                       commandert >=0.1,
                       commander-cli
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite test-commander
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  other-modules:       Options.Commander.ArgumentSpec,
                       Options.Commander.EitherSpec,
                       Options.Commander.EnvironmentSpec,
                       Options.Commander.FlagSpec,
                       Options.Commander.OptionSpec,
                       Options.Commander.RawSpec,
                       Options.Commander.SubcommandSpec,
                       Options.CommanderSpec,
                       Test
  default-extensions:  BlockArguments,
                       DataKinds,
                       KindSignatures,
                       LambdaCase,
                       OverloadedStrings,
                       TemplateHaskell,
                       TypeApplications,
                       TypeOperators,
                       ScopedTypeVariables
  build-depends:       base >= 4.12 && < 5,
                       text >=1.2 && < 2,
                       unordered-containers >= 0.2 && < 1,
                       commandert >=0.1,
                       commander-cli,
                       hspec ^>= 2.7.4,
                       hspec-discover ^>= 2.7.4
  ghc-options:         -Wall -fprint-potential-instances -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

